// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FINISH_LOADING should loaded data for the given image 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "images": Immutable.Map {
      "byUuid": Immutable.Map {
        "0db0937d-2ee2-4fce-a78f-17adbfdb2fbe": Immutable.OrderedMap {
          "some": "value",
          "another": "different value",
          "status": "LOADED",
        },
      },
    },
  },
}
`;

exports[`The reducer should create a valid initial state 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "images": Immutable.Map {
      "byUuid": Immutable.Map {},
    },
  },
}
`;
